[project]
name = "acc-sizer-companion-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.4",
    "et-xmlfile>=2.0.0",
    "idna>=3.10",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "prettytable>=3.14.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "six>=1.17.0",
    "tzdata>=2025.1",
    "urllib3>=2.3.0",
    "wcwidth>=0.2.13",
]
